--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -43,6 +43,34 @@
     </div>
 </script>
 
+<script type="text/x-handlebars-template" id="core-chart-template">
+    <div class="row-fluid">
+        {{#each this.elementConfg}}
+            <div id="charts-box" class="{{#getValue "{\"1\":\"span12\",\"2\":\"span6\",\"3\":\"span4\"}" ../colCount}}{{/getValue}} widget-box transparent">
+                <div class="widget-header">
+                    <h4 class="smaller">
+                        <i id="charts-loading" class="icon-spinner icon-spin blue bigger-125"></i> {{title}}
+                    </h4>
+                    <div class="widget-toolbar pull-right">
+                        <a data-action="collapse">
+                            <i class="icon-chevron-up"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="widget-body">
+                    <div class="widget-main" style="height:300px;">
+                        {{#IfCompare @index 1 operator='%2'}}
+                            <div class="stack-chart negate" id="{{../../id}}_{{@index}}"></div>
+                        {{else}}
+                            <div class="stack-chart" id="{{../../id}}_{{@index}}"></div>
+                        {{/IfCompare}}
+                    </div>
+                </div>
+            </div>
+        {{/each}}
+    </div>
+</script>
+
 <script type="text/x-handlebars-template" id="network-port-heat-chart-template">
     <div>
         <h4 class="smaller">Source TCP Port Map </h4>
