--- a/webroot/monitor/networking/ui/templates/networking.tmpl
+++ b/webroot/monitor/networking/ui/templates/networking.tmpl
@@ -11,7 +11,6 @@
 			            <div class="col1wrap">
 			                <div class="col1">
 								<div id="graph-connected-elements" class="graph-connected-elements row-fluid">
-                                    <div id="graph-loading" class="graph-loading loading-spinner"><i class="icon-refresh icon-spin"></i></div>
 								</div>
 							</div>
 			            </div>
@@ -22,6 +21,10 @@
 						</div>
 					</div>
 				</div>
+                <div id="graph-loading" class="graph-loading">
+                     <p class="loading-message">Loading..<p>
+                </div>
+
 			</div>
 		</div>
 	</div>
