--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -1,3 +1,7 @@
+<!--
+ Copyright (c) 2014 Juniper Networks, Inc. All rights reserved.
+-->
+
 <script type="text/x-handlebars-template" id="traffic-stats-tab-template">
     <div class="row-fluid center">
         <div id="{{dropdownId}}" class="traffic-stats-dropdown select2-medium-width"></div>
