Related-Bug:#1506851     Converted the physical topology page to MVC code pattern     some known issues are there like     1) Arrow misalignment while showing the underlay path in search flow and trace flow     2) Prev and next buttons in trace flow tab are not there Change-Id: Id22ae63163552c2ab7ffb2875eb21ca0c3eaae7c

--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -22,6 +22,21 @@
     </div>
 </script>
 
+
+<script type="text/x-handlebars-template" id="underlay-graph-template">
+    <div class="row-fluid visualization-container">
+        <div class="graph-canvas" style="overflow: hidden; height: 500px; width: 1230px;">
+            <div style="overflow: hidden; position: relative; display: inline-block;">
+                <div id="underlay-graph" class="topology-visualization" style="position: relative; overflow: hidden; height:500px; display: inline-block; width:1150px;">
+                    <div id="graph-loading" class="graph-loading">
+                        <p class="loading-message">Loading..<p>
+                    </div>
+                </div>
+            </div>
+            <div id="graph-control-panel" style= "display:inline;"></div>
+        </div>
+    </div>
+</script>
 <script type="text/x-handlebars-template" id="form-result-page-template">
     <div id="{{prefix}}-container">
         <div id='{{prefix}}-form-container'>
