Related-Bug: #1488346 - Moved the common form-results template to controller.tmpl and using it for all monitor infra pages. - Fixed the issues caused by removing the monitor_infra_* files.
Change-Id: Ic73369079dbbd7d93cf133b1fbcfaade5a55c634

--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -21,3 +21,14 @@
         <div id='dst-udp-heat-chart' class='portMapChart'></div>
     </div>
 </script>
+
+<script type="text/x-handlebars-template" id="form-result-page-template">
+    <div id="{{prefix}}-container">
+        <div id='{{prefix}}-form-container'>
+            <div id='{{prefix}}-form'></div>
+        </div>
+        <div id="{{prefix}}-results-container">
+            <div id='{{prefix}}-results'></div>
+        </div>
+    </div>
+</script>
