--- a/webroot/reports/qe/ui/templates/qe.tmpl
+++ b/webroot/reports/qe/ui/templates/qe.tmpl
@@ -2,22 +2,26 @@
 
 <script type="text/x-handlebars-template" id="query-select-popup-template">
     <form id="{{queryPrefix}}-select-popup-form" onsubmit="return false;">
-        <div class="row-fluid">
-            <a class="pull-right selectAllLink " data-bind="text: select_data_object().select_all_text, click: select_data_object().on_select_all"></a>
+        <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_FETCHING">
+            <i class="icon-spinner icon-spin"></i> Fetching..
         </div>
-        {{#each fields}}
-            {{#IfCompare @index 0 operator="=="}}
-                <div class="row-fluid">
-            {{else}}
-                {{#IfCompare @index 0 operator="%3"}}
-                    </div>
-                    <div class="row-fluid">
-                {{/IfCompare}}
-            {{/IfCompare}}
-            <div class="span4">
-                <input type="checkbox" name="{{this.name}}" value="{{this.name}}" data-bind="checked: select_data_object().checked_fields, click: select_data_object().on_select, enable: select_data_object().enable_map['{{this.name}}']" class="ace-input"/> <span class="ace-lbl"> {{this.name}}</span>
+        <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_EMPTY">
+            <p>Select Fields not found for this table. Please select a valid table name.</p>
+        </div>
+        <div class="row-fluid" data-bind="visible: select_data_object().requestState() == cowc.DATA_REQUEST_STATE_SUCCESS_NOT_EMPTY">
+            <div class="row-fluid">
+                <a class="pull-right selectAllLink " data-bind="text: select_data_object().select_all_text, click: select_data_object().on_select_all"></a>
             </div>
-        {{/each}}
+            <div class="row-fluid row-fluid-3n" data-bind="foreach: select_data_object().select_fields()">
+                <div class="span4">
+                    <input type="checkbox"
+                        data-bind="
+                            name: name, value: name, checked: $root.select_data_object().checked_fields,
+                            click: function(data, event) { return $root.select_data_object().on_select($root, data, event); },
+                            enable: $root.select_data_object().enable_map()[name]()"
+                        class="ace-input"/> <span class="ace-lbl" data-bind="text: name"></span>
+                </div>
+            </div>
         </div>
     </form>
 </script>
