Added New DNS Record Type 'MX' and MX preference to UI Closes-bug: #1491798
Change-Id: Ie60c44ff5651d8014b3dad16efb5830c98a46e1c

--- a/webroot/config/dns/records/ui/templates/dnsRecords.tmpl
+++ b/webroot/config/dns/records/ui/templates/dnsRecords.tmpl
@@ -1,3 +1,5 @@
+<!--Copyright (c) 2015 Juniper Networks, Inc. All rights reserved.-->
+
 <script type="text/x-handlebars-template" id="dns-records-input-view-template">
     <div data-bind="{{#if viewConfig.visible}} visible: {{viewConfig.visible}} {{/if}}">
         <div class="row-fluid form-label">
