Addressing UI Issues
1) Added the loading icon in trace flow/map flow.
2) Added the undelrayGraphModel as parameter to flow record parser.
3) Based on review comment UnderlayGraphModel extends the existing ContrailViewModel
   instead of ContrailVisModel. ContrailVisModel.js will be removed in later commits.
Ran unit test cases.
Related-Bug:#1506851

Change-Id: I50a43345fff6da8d63adc9e51ab138c94ca3657f

--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -28,7 +28,7 @@
         <div id="graph-loading" class="graph-loading">
                 <p class="loading-message">Loading..<p>
         </div>
-        <div id="underlay-graph" style="height:350px; display: block; width:1190px;">
+        <div id="underlay-graph" style="height:350px; display: block; width:100%;">
         </div>
     </div>
 </script>
