Realted-Bug:#1529765 1)Draggable nodes both horizontal and vertical 2)Parallel links for map flow and trace flow 3)Bezier curved links b/w nodes 4)Double click on a node when trace/map flow is shown. 	An error message pops up warning user that the action clears the map/trace flow. 	Checkbox to clear this error message if the user doesn't want to see this message again. 5)Showing the selected flow info in the bread crumb while doing trace/map flow.
Change-Id: I56d31aeae72a0313a550b647e36a851fc089e69e

--- a/webroot/common/ui/templates/controller.tmpl
+++ b/webroot/common/ui/templates/controller.tmpl
@@ -32,6 +32,18 @@
         </div>
     </div>
 </script>
+
+<script type="text/x-handlebars-template" id="flow-info-template">
+    <div id = "flow-info">
+        <span class="">{{action}} </span>
+            from
+        <span class="">[IP:<span class="bold"> {{sourceip}}</span>, Port: <span class="bold">{{sport}}</span>]</span>
+            to
+        <span class="">[IP: <span class="bold">{{destip}}</span>, Port: <span class="bold">{{dport}}</span>]</span>
+        <span class="reset">reset</span>
+    </div>
+</script>
+
 <script type="text/x-handlebars-template" id="form-result-page-template">
     <div id="{{prefix}}-container">
         <div id='{{prefix}}-form-container'>
