--- a/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
+++ b/webroot/monitor/infrastructure/common/ui/templates/monitor.infra.tmpl
@@ -43,3 +43,16 @@
     <div class="footer-links">
     </div>
 </script>
+
+<script type="text/x-handlebars-template" id="monitor-infra-topology-reset-template">
+    <div>Double click on a node clears the map/trace flow.
+        <br>
+        Do you want to continue?
+        <br>
+        <br>
+        <div>
+          <input class="ace-input" type="checkbox" id="remember-reset-topology">
+          <span class="ace-lbl"> Dont show this message again</span>
+        </div>
+    </div>
+</script>
